// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cas-login Renders \`cas-login\` with redirect query and title 1`] = `
<div
  class="v-card v-sheet theme--light"
>
  <div
    class="v-card__text"
  >
    <div
      class="ml-2 mb-2 font-weight-bold"
    >
      Login with CAS
    </div>
    <a
      class="v-btn theme--light primary"
      href="https://canopsis/backend/api/v4/cas/login?redirect=http%3A%2F%2Flocalhost%2Fredirect&service=https%3A%2F%2Fcanopsis%2Fbackend%2Fapi%2Fv4%2Fcas%2Floggedin"
    >
      <div
        class="v-btn__content"
      >
        Cas config title
      </div>
    </a>
  </div>
</div>
`;

exports[`cas-login Renders \`cas-login\` without redirect 1`] = `
<div
  class="v-card v-sheet theme--light"
>
  <div
    class="v-card__text"
  >
    <div
      class="ml-2 mb-2 font-weight-bold"
    >
      Login with CAS
    </div>
    <a
      class="v-btn theme--light primary"
      href="https://canopsis/backend/api/v4/cas/login?redirect=http%3A%2F%2Flocalhost&service=https%3A%2F%2Fcanopsis%2Fbackend%2Fapi%2Fv4%2Fcas%2Floggedin"
    >
      <div
        class="v-btn__content"
      >
        Login with CAS
      </div>
    </a>
  </div>
</div>
`;
